working drag and drop for files

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -1,1 +1,4 @@
-@import "~trplanex/src/styles/app.scss"
+@import "~trplanex/src/styles/themes/dark.scss";
+@import "~trplanex/src/styles/app.scss";
+@import "Home";
+@import "UploadBox";
