styling for ul on files list

--- a/client/src/styles/UploadBox.scss
+++ b/client/src/styles/UploadBox.scss
@@ -22,6 +22,10 @@
 
     .selected-files-list {
         list-style-type: disc;
+
+        li {
+            margin-left: 25px;
+        }
         
         p {
             vertical-align: middle;
